Remove padding from anchors to avoid spacing issues

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -104,10 +104,6 @@
             background: transparent;
             display: inline;
             line-height: $centered-navigation-height;
-
-            a {
-                padding-right: $centered-navigation-item-padding;
-            }
         }
 
         a {
